# routa

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md  api-contract.yaml  docusaurus.config.js  eslint.config.mjs  package-lock.json  package.json  sidebars.js  vitest.config.ts
.claude/: settings.local.json
.github/: FUNDING.yml  pull_request_template.md
.husky/: pre-commit  pre-push
.storybook/: main.ts  manager.ts  preview.tsx
crates/harness-monitor/: Cargo.toml  README.md
crates/harness-monitor/src/: hooks.rs  main.rs  models.rs  repo.rs  state.rs  state_events.rs  state_navigation.rs  state_views.rs  tui.rs  tui_cache.rs  tui_cache_tests.rs  tui_fitness.rs  tui_panels.rs  tui_render.rs  tui_tests.rs
crates/harness-monitor/src/attribute/: mod.rs
crates/harness-monitor/src/evaluate/: entrix.rs  mod.rs
crates/harness-monitor/src/govern/: mod.rs
crates/harness-monitor/src/observe/: codex_transcript.rs  detect.rs  hooks.rs  mod.rs
crates/harness-monitor/src/run/: mod.rs  run.rs  task.rs
crates/harness-monitor/src/shared/: db.rs  mod.rs  models.rs
crates/harness-monitor/src/snapshots/: harness_monitor__tui__tests__routa_watch_tui_compact.snap  harness_monitor__tui__tests__routa_watch_tui_file_preview.snap  harness_monitor__tui__tests__routa_watch_tui_full_runs.snap  harness_monitor__tui__tests__routa_watch_tui_search.snap  harness_monitor__tui__tests__routa_watch_tui_summary.snap
crates/harness-monitor/src/ui/: cache.rs  cache_tests.rs  file_rows.rs  mod.rs  panels.rs  render.rs  state.rs  state_events.rs  tests.rs  tui.rs  views.rs
crates/harness-monitor/src/ui/snapshots/: harness_monitor__ui__tui__tests__routa_watch_tui_full_runs.snap
crates/routa-entrix/: Cargo.toml
crates/routa-entrix/src/: governance.rs  lib.rs  main.rs  review_context.rs  review_context_tree_sitter.rs
crates/routa-entrix/src/review_context/: analysis.rs  mod.rs  tests.rs
docs-cn/: 01-架构模式.md  02-核心业务流程.md  03-核心业务功能.md  04-智能体协作开发自动化流程.md  05-从0到1构建项目自动化开发操作指南.md  (+1 more)
tools/routa-fitness/: README.md  pyproject.toml
tools/routa-fitness/routa_fitness/: __init__.py  cli.py  evidence.py  governance.py  model.py  scoring.py  server.py
tools/routa-fitness/routa_fitness/reporters/: json_reporter.py  terminal.py
tools/routa-fitness/routa_fitness/runners/: graph.py  shell.py
tools/routa-fitness/routa_fitness/structure/: adapter.py  builtin.py  impact.py  protocol.py
tools/routa-fitness/tests/: test_builtin_graph.py  test_cli.py  test_evidence.py  test_governance.py  test_graph_runner.py  test_model.py  test_scoring.py  test_shell_runner.py
(+769 files in other folders)
