[package]
name = "harness-monitor"
version = "0.14.1"
edition = "2021"
license.workspace = true
authors.workspace = true
description = "Harness Monitor - local agent file attribution and fitness monitor for multi-agent coding sessions"
repository = "https://github.com/phodal/routa-js"
homepage = "https://github.com/phodal/routa-js"

[[bin]]
name = "harness-monitor"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
ratatui = "0.29"
routa-entrix = { version = "0.14.1", path = "../routa-entrix" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
sha2 = "0.11"
syntect = "5"

[dev-dependencies]
insta = "1"
pretty_assertions = "1"
tempfile = "3"
