[package]
name = "routa-entrix"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Entrix fitness function engine — Rust implementation of tools/entrix"
repository = "https://github.com/phodal/routa-js"
homepage = "https://github.com/phodal/routa-js"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
